Doc de Companies com o Swagger
