# src/routes/companyRoute.js
@@ -6,10 +6,10 @@ const router = Router();
 
 router.use(auth)
     .post("/companies", CompanyController.create)
-    .get("/companies", CompanyController.getCompanies)
+    .get("/companies/all", CompanyController.getCompanies)
     .get("/companies/:id", CompanyController.getCompanyById)
-    .get("/company/owner/", CompanyController.getCompanyByOwner)
-    .put("/companies/:id", CompanyController.updateCompany)
-    .delete("/companies/:id", CompanyController.deleteCompany)
+    .get("/company/owner", CompanyController.getCompanyByOwner)
+    .put("/companies/edit/:id", CompanyController.updateCompany)
+    .delete("/companies/delete/:id", CompanyController.deleteCompany)
 
 export default router;
